[gd_scene load_steps=5 format=3 uid="uid://jccue731r3ju"]

[ext_resource type="Script" path="res://Misc/AutoLoads/Layers/Sky/Sky.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://gu3qcbcljokv" path="res://Misc/AutoLoads/Layers/Sky/Sprites/Stars.png" id="2"]
[ext_resource type="Texture2D" uid="uid://kkfjxp3lgoar" path="res://Misc/AutoLoads/Layers/Sky/Sprites/Clouds.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bv07u2k3mik1c" path="res://Misc/AutoLoads/Layers/Sky/Sprites/HiddenClouds.png" id="4"]

[node name="Sky" type="Node2D"]
script = ExtResource("1")

[node name="SkyBackground" type="ColorRect" parent="."]
offset_right = 1400.0
offset_bottom = 800.0

[node name="DawnDusk" type="Sprite2D" parent="."]
offset = Vector2(175, 100)

[node name="Sun" type="Sprite2D" parent="."]
offset = Vector2(175, 100)

[node name="Stars" type="Sprite2D" parent="."]
modulate = Color(0.682353, 0.866667, 1, 1)
position = Vector2(256, 256)
scale = Vector2(2, 2)
texture = ExtResource("2")

[node name="HiddenClouds" type="Sprite2D" parent="."]
position = Vector2(0, 400)
scale = Vector2(4, 4)
texture = ExtResource("4")

[node name="Clouds" type="Sprite2D" parent="."]
position = Vector2(0, 50)
scale = Vector2(2, 2)
texture = ExtResource("3")
offset = Vector2(0, 100)
